added cards to folio

--- a/portfolio/folio/templates/folio/base.html
+++ b/portfolio/folio/templates/folio/base.html
@@ -52,10 +52,10 @@
             <ul class="list-unstyled components">
                 <div class="contact-icons d-flex justify-content-center">
                     <div>
-                        <a href="#"><i class="material-icons mr-2" style='font-size:26px'>email</i></a>
+                        <a href="mailto:jeffmaldo27@gmail.com"><i class="material-icons mr-2" style='font-size:26px'>email</i></a>
                     </div>
                     <div>
-                        <a href="#"><i class='fab fa-linkedin-in' style='font-size:24px'></i></a>
+                        <a href="https://linkedin.com/in/jeffersonmaldonado"><i class='fab fa-linkedin-in' style='font-size:24px'></i></a>
                     </div>
                 </div>
                 <li>
