--- a/portfolio/templates/base.html
+++ b/portfolio/templates/base.html
@@ -69,7 +69,7 @@
                             class="dropdown-toggle">Portfolio</a>
                         <ul class="collapse list-unstyled" id="folioSubmenu">
                             <li>
-                                <a href="#">Mechanical</a>
+                                <a href="{% url 'findex' %}">Mechanical</a>
                             </li>
                             <li>
                                 <a href="#">Electrical</a>
@@ -80,7 +80,7 @@
                         </ul>
                     </li>
                     <li>
-                            <a href="#">Blog</a>
+                            <a href="{% url 'bindex' %}">Blog</a>
                         </li> 
                 <li>
                     <a href="#aboutSubmenu" data-toggle="collapse" aria-expanded="false"
