--- a/portfolio/blog/templates/blog/blog.html
+++ b/portfolio/blog/templates/blog/blog.html
@@ -1,17 +1,65 @@
 {% extends "base.html" %}
 
 {% block title %}
-Portfolio - {{ entry.title }}
+Blog - {{ entry.title }}
+
 {% endblock %}
 
 {% block body %}
 {% autoescape off %}
-<h2>{{ entry.title }}</h2>
-{{ entry.body }}
-{{ entry.pub_date }}
-{{ entry.category }}
+
+{% if request.user.is_staff %}
+<script>
+  var edit = function (section) {
+    $(section).summernote({ focus: true });
+  };
+  var save = function (section, model) {
+    $(document).ready(function () {
+      var data = { html: $(section).summernote('code'), item_id: {{ entry.pk }}, model: model };
+  var csrftoken = '{{ csrf_token }}';
+  const url = '';
+  $.ajax({
+    headers: { "X-CSRFToken": csrftoken },
+    url: url,
+    type: "POST",
+    data: data,
+    dataType: "HTML"
+  })
+  $(section).summernote('destroy');
+  });
+};
+</script>
+{% endif %}
+<h2>
+  <div class="page_title">{{ entry.title }}</div>
+</h2>
+{% if request.user.is_staff %}
+<button id="edit" class="btn btn-secondary" onclick="edit('.page_title')" type="button">Edit</button>
+<button id="save" class="btn btn-secondary" onclick="save('.page_title','title')" type="button">Save</button>
+{% endif %}
+<h6 clas="small">
+    <div class="page_publish">{{ entry.pub_date }}</div>
+</h6>
+<div class="page_body">{{ entry.body }}</div>
+{% if request.user.is_staff %}
+<button id="edit" class="btn btn-secondary" onclick="edit('.page_body')" type="button">Edit</button>
+<button id="save" class="btn btn-secondary" onclick="save('.page_body','body')" type="button">Save</button>
+
+<div class = "mt-2">
+    <h6>Summary </h6>
+    <div class="page_summary">{{ entry.summary}}</div>
+    <button id="edit" class="btn btn-secondary" onclick="edit('.page_summary')" type="button">Edit</button>
+    <button id="save" class="btn btn-secondary" onclick="save('.page_summary','summary')" type="button">Save</button>
+</div>
+
+<div class = "mt-2">
+  <h6>Thumbnail Picture</h6>
+  <img class="" src="{{ entry.thumbnail_url}}">
+  <div class="page_picture">{{ entry.thumbnail_url}}</div>
+  <button id="edit" class="btn btn-secondary" onclick="edit('.page_picture')" type="button">Edit</button>
+  <button id="save" class="btn btn-secondary" onclick="save('.page_picture','thumbnail_url')" type="button">Save</button>
+</div>
+{% endif %}
+
 {% endautoescape %}
 {% endblock %}
-
-
-
