--- a/portfolio/templates/base.html
+++ b/portfolio/templates/base.html
@@ -25,8 +25,8 @@
     <!--script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
         crossorigin="anonymous"></script-->
-     <script src="https://code.jquery.com/jquery-3.4.1.js"></script>
-        
+    <script src="https://code.jquery.com/jquery-3.4.1.js"></script>
+
     <!-- Popper.JS -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js"
         integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ"
@@ -49,39 +49,37 @@
         <!-- Sidebar Holder -->
         <nav id="sidebar">
             <div class="sidebar-header">
-                <div class="d-flex justify-content-center">(PIC-HERE)</div>
+                <div class="d-flex justify-content-center"><img class="avatar" src="{% static "folio/jeff2.jpg" %}"></div>
                 <div class="d-flex justify-content-center">
                     <h6>Jefferson Maldonado</h6>
+                </div>
+                <div class="d-flex justify-content-center">
+                <h6 class="small">Sr. Robotics Systems Engineer</h6>
                 </div>
             </div>
 
             <ul class="list-unstyled components">
                 <div class="contact-icons d-flex justify-content-center">
                     <div>
-                        <a href="mailto:jeffmaldo27@gmail.com"><i class="material-icons mr-2" style='font-size:26px'>email</i></a>
+                        <a href="mailto:jeffmaldo27@gmail.com" data-toggle="tooltip" title="Shoot me an email!"><i class="material-icons mr-2"
+                                style='font-size:26px'>email</i></a>
                     </div>
                     <div>
-                        <a href="https://linkedin.com/in/jeffersonmaldonado"><i class='fab fa-linkedin-in' style='font-size:24px'></i></a>
+                        <a href="https://linkedin.com/in/jeffersonmaldonado" data-toggle="tooltip" title="Connect with me!"><i class='fab fa-linkedin-in'
+                                style='font-size:24px'></i></a>
+                    </div>
+                    <div class="m-1">
+                            <a href="https://github.com/jeffmaldo27" data-toggle="tooltip" title="Check out my Github!"><i class='fas fa-code'
+                                    style='font-size:20px'></i></a>
                     </div>
                 </div>
+
                 <li>
-                        <a href="#folioSubmenu" data-toggle="collapse" aria-expanded="false"
-                            class="dropdown-toggle">Portfolio</a>
-                        <ul class="collapse list-unstyled" id="folioSubmenu">
-                            <li>
-                                <a href="{% url 'findex' %}">Mechanical</a>
-                            </li>
-                            <li>
-                                <a href="#">Electrical</a>
-                            </li>
-                            <li>
-                                <a href="#">Software</a>
-                            </li>
-                        </ul>
-                    </li>
-                    <li>
-                            <a href="{% url 'bindex' %}">Blog</a>
-                        </li> 
+                    <a href="{% url 'findex' %}">Portfolio</a>
+                </li>
+                <li>
+                    <a href="{% url 'bindex' %}">Blog</a>
+                </li>
                 <li>
                     <a href="#aboutSubmenu" data-toggle="collapse" aria-expanded="false"
                         class="dropdown-toggle">About</a>
@@ -96,9 +94,7 @@
                 </li>
 
 
-                <li>
-                    <a href="{% url 'contact' %}">Contact</a>
-                </li>
+
             </ul>
         </nav>
         <div id="content">
