--- a/portfolio/folio/templates/folio/about.html
+++ b/portfolio/folio/templates/folio/about.html
@@ -1,18 +1,48 @@
 {% extends "base.html" %}
 
 {% block title %}
-ABOUT-TODO
+About - {{ entry.title }}
+
 {% endblock %}
 
 {% block body %}
+{% autoescape off %}
 
-            
-<h2>ABOUT-TODO</h2>
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+{% if request.user.is_staff %}
+<script>
+  var edit = function (section) {
+    $(section).summernote({ focus: true });
+  };
+  var save = function (section, model) {
+    $(document).ready(function () {
+      var data = { html: $(section).summernote('code'), item_id: {{ entry.pk }}, model: model };
+  var csrftoken = '{{ csrf_token }}';
+  const url = '';
+  $.ajax({
+    headers: { "X-CSRFToken": csrftoken },
+    url: url,
+    type: "POST",
+    data: data,
+    dataType: "HTML"
+  })
+  $(section).summernote('destroy');
+  });
+};
+</script>
+{% endif %}
+<h2>
+  <div class="page_headline">{{ entry.title }}</div>
+</h2>
+{% if request.user.is_staff %}
+<button id="edit" class="btn btn-secondary" onclick="edit('.page_headline')" type="button">Edit</button>
+<button id="save" class="btn btn-secondary" onclick="save('.page_headline','title')" type="button">Save</button>
+{% endif %}
 
-<div class="line"></div>
+<div class="page_body">{{ entry.body }}</div>
+{% if request.user.is_staff %}
+<button id="edit" class="btn btn-secondary" onclick="edit('.page_body')" type="button">Edit</button>
+<button id="save" class="btn btn-secondary" onclick="save('.page_body','body')" type="button">Save</button>
+{% endif %}
 
-<h2>Lorem Ipsum Dolor</h2>
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-    
+{% endautoescape %}
 {% endblock %}
