--- a/portfolio/templates/base.html
+++ b/portfolio/templates/base.html
@@ -49,7 +49,7 @@
         <!-- Sidebar Holder -->
         <nav id="sidebar">
             <div class="sidebar-header">
-                <div class="d-flex justify-content-center"><img class="avatar" src="{% static "folio/jeff2.jpg" %}"></div>
+                <div class="d-flex justify-content-center"><img class="avatar" src="{% static "folio/jeff.jpg" %}"></div>
                 <div class="d-flex justify-content-center">
                     <h6>Jefferson Maldonado</h6>
                 </div>
@@ -85,10 +85,10 @@
                         class="dropdown-toggle">About</a>
                     <ul class="collapse list-unstyled" id="aboutSubmenu">
                         <li>
-                            <a href="{% url 'about' %}">Bio</a>
+                            <a href="{% url 'about' 1 %}">Bio</a>
                         </li>
                         <li>
-                            <a href="{% url 'about' %}">CV</a>
+                            <a href="{% url 'about' 2 %}">CV</a>
                         </li>
                     </ul>
                 </li>
