--- a/portfolio/templates/base.html
+++ b/portfolio/templates/base.html
@@ -74,7 +74,7 @@
                         <a href="{% url 'about' 1 %}">Bio</a>
                      </li>
                      <li>
-                        <a href="{% url 'about' 2 %}">CV</a>
+                        <a href="{% url 'about' 2 %}">Resume</a>
                      </li>
                   </ul>
                </li>
